bootstrap/trunk/ingress/temp/tempingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: jenkins-dev
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/server-alias: svn.caci-challenge.us,sonarqube.caci-challenge.us,artifactory.caci-challenge.us
  generation: 1
  labels:
    app.kubernetes.io/component: jenkins-master
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jenkins-dev
    helm.sh/chart: jenkins-2.5.2
  name: jenkins-dev
  namespace: default
spec:
  rules:
  - host: jenkins-dev.caci-challenge.us
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /
  
status:
  loadBalancer:
    ingress:
    - ip: 52.227.238.146
